[tool.poetry]
name = "slack-jokes"
version = "0.1.0"
description = "Basic Slack app that tells jokes"
authors = ["rootshellz <rootshellz@rootshellz.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyjokes = "^0.6.0"
python-dotenv = "^0.20.0"
slack-bolt = "^1.14.3"

[tool.poetry.dev-dependencies]
bpython = "^0.22.1"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
